--- a/example/Examples.ipynb
+++ b/example/Examples.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c65e5ee9bfce28b1be79ec539576d180691e7b0c3ac48291c5cef5dc39c305ca"
+  "signature": "sha256:d6ddc838761810f11c484c5e782311cd249bbc6720b8d2e85369aabed7c996ad"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -137,7 +137,8 @@
       "--------------------\n",
       "\n",
       "### Creating a list of molecules from an xyz trajectory ###\n",
-      "      trj_list = list(pybel.readfile('xyz', 'filename.xyz')"
+      "      trj_list = list(pybel.readfile('xyz', 'filename.xyz')\n",
+      "Then it should be take out a list of snapshot or similar..."
      ]
     }
    ],
